@@ -1,3 +1,7 @@
+2008-09-26  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rb_cairo_context.c: support cairo 1.8.0.
+
 2008-09-19  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/, test/: support cairo 1.7.6.
